--- a/src/components/Toast/Toast.css
+++ b/src/components/Toast/Toast.css
@@ -4,6 +4,10 @@
 @import '@radix-ui/colors/slate.css';
 @import '@radix-ui/colors/violet.css';
 
+code {
+  color: var(--arc-palette-foregroundSecondary);
+}
+
 .ToastViewport {
   --viewport-padding: 25px;
   position: fixed;
@@ -22,11 +26,12 @@
 }
 
 .ToastRoot {
-  background-color: white;
+  background-color: var(--arc-palette-background);
   border-radius: 6px;
-  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  box-shadow: hsla(0, 0%, 0%, 0.78) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   padding: 15px;
   display: grid;
+  color: aliceblue;
   grid-template-areas: 'title action' 'description action';
   grid-template-columns: auto max-content;
   column-gap: 15px;
@@ -80,7 +85,7 @@
   grid-area: title;
   margin-bottom: 5px;
   font-weight: 500;
-  color: var(--slate12);
+  color: var(--arc-palette-title);
   font-size: 15px;
 }
 
